# medgemma-agentic-workflow

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
configs/agents/: clinical_note.yaml  diagnosis.yaml  treatment.yaml
configs/workflows/: clinical_assessment.yaml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  QUICKSTART_HF.md
examples/: basic_agent.py  clinical_workflow.py  reasoning_example.py
prompts/: clinical_note.jinja2  diagnosis.jinja2  treatment.jinja2
src/: __init__.py
src/agents/: __init__.py  base.py  clinical.py  reasoning.py
src/config/: __init__.py  loader.py
src/llm/: __init__.py  client.py
src/templates/: __init__.py  engine.py
src/workflows/: __init__.py  engine.py
tests/: test_agents.py  test_workflows.py
